--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+        <title>VALENTINE CARD</title>
         <link rel="stylesheet" href="style.css">
     </head>
  
